Modify image path

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ URL: https://code.google.com/p/io-2012-slides
         </hgroup>
         <article>
             <ul class="build">
-                <li>Open source bukan tentang memakai Ubuntu<br /><img src='/images/ubuntu.png' /></li>
+                <li>Open source bukan tentang memakai Ubuntu<br /><img src='images/ubuntu.png' /></li>
             </ul>
         </article>
    </slide> 
@@ -58,7 +58,7 @@ URL: https://code.google.com/p/io-2012-slides
         </hgroup>
         <article>
             <ul class="build">
-                <li>Bukan juga tentang mengajak orang lain berpindah ke Open Office<br /><img src='/images/office.jpg' /></li>
+                <li>Bukan juga tentang mengajak orang lain berpindah ke Open Office<br /><img src='images/office.jpg' /></li>
             </ul>
         </article>
    </slide> 
@@ -68,7 +68,7 @@ URL: https://code.google.com/p/io-2012-slides
         </hgroup>
         <article>
             <ul class="build">
-                <li>Bukan tentang menjelek-jelekan windows<br /><img src='/images/windows.jpg' width='600' height='400' /></li>
+                <li>Bukan tentang menjelek-jelekan windows<br /><img src='images/windows.jpg' width='600' height='400' /></li>
             </ul>
         </article>
    </slide> 
@@ -79,7 +79,7 @@ URL: https://code.google.com/p/io-2012-slides
         </hgroup>
         <article>
             <ul class="build">
-                <li>Berkarya di dunia online<br /><img src='/images/teddy.png' width='800' height='400' /></li>
+                <li>Berkarya di dunia online<br /><img src='images/teddy.png' width='800' height='400' /></li>
             </ul>
         </article>
    </slide>
@@ -103,8 +103,8 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Open source sebagai jembatan identitas</h2>
         </hgroup>
         <article>
-        <img src='/images/geeklist.png' width='400' height='400' />
-        <img src='/images/coderwall.png' width='500' height='400'/>
+        <img src='images/geeklist.png' width='400' height='400' />
+        <img src='images/coderwall.png' width='500' height='400'/>
             
         </article>
     </slide>
@@ -114,7 +114,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Open source sebagai pembuka kesempatan kerja</h2>
         </hgroup>
         <article>
-            <img src='/images/github1.png'/>
+            <img src='images/github1.png'/>
         </article>
     </slide>
 
@@ -123,7 +123,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Open source sebagai pembuka kesempatan kerja</h2>
         </hgroup>
         <article>
-            <img src='/images/github2.png'/>
+            <img src='images/github2.png'/>
         </article>
     </slide>
 
@@ -140,7 +140,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Terbiasa membaca dokumentasi</h2>
         </hgroup>
         <article>
-            <img src='/images/manual.png' />
+            <img src='images/manual.png' />
         </article>
     </slide>
 
@@ -149,7 +149,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Terbiasa mencari, bertanya &amp; menjawab online</h2>
         </hgroup>
         <article>
-            <img src='/images/stackoverflow.png' />
+            <img src='images/stackoverflow.png' />
         </article>
     </slide>
     <slide>
@@ -157,9 +157,9 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Bergaul dengan komunitas</h2>
         </hgroup>
         <article>
-            <img src='/images/komunitas_reddit.png' width='300' height='300' />
-            <img src='/images/komunitas_milis.png' width='300' height='300' />
-            <img src='/images/komunitas_facebook.png' width='300' height='300' />
+            <img src='images/komunitas_reddit.png' width='300' height='300' />
+            <img src='images/komunitas_milis.png' width='300' height='300' />
+            <img src='images/komunitas_facebook.png' width='300' height='300' />
         </article>
     </slide>
     <slide>
@@ -167,7 +167,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Belajar terminologi dan teknologi terbaru</h2>
         </hgroup>
         <article>
-            <img src='/images/hn.png' />
+            <img src='images/hn.png' />
         </article>
     </slide>
     <slide>
@@ -175,9 +175,9 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Terlatih bahasa inggris</h2>
         </hgroup>
         <article>
-            <img src='/images/stackoverflow.png' width='300' height='300' />
-            <img src='/images/hn.png' width='300' height='300' />
-            <img src='/images/komunitas_reddit.png' width='300' height='300' />
+            <img src='images/stackoverflow.png' width='300' height='300' />
+            <img src='images/hn.png' width='300' height='300' />
+            <img src='images/komunitas_reddit.png' width='300' height='300' />
         </article>
     </slide>
     <slide>
@@ -185,7 +185,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Membuka pemikiran baru</h2>
         </hgroup>
         <article>
-            <img src='/images/pemikiran.png' />
+            <img src='images/pemikiran.png' />
         </article>
     </slide>
 
@@ -202,7 +202,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Mulai dengan ide yang kita suka</h2>
         </hgroup>
         <article>
-            <img src='/images/game_good.jpg' />
+            <img src='images/game_good.jpg' />
 
         </article>
     </slide>
@@ -212,7 +212,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Mulai dengan ide yang kita suka.. dan sederhana</h2>
         </hgroup>
         <article>
-            <img src='/images/game_simple.jpg' />
+            <img src='images/game_simple.jpg' />
         </article>
     </slide>
     <slide>
@@ -295,7 +295,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Online CV</h2>
         </hgroup>
         <article>
-            <img src='/images/linkedin.png' />
+            <img src='images/linkedin.png' />
         </article>
     </slide>
     <slide>
@@ -303,7 +303,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Online CV</h2>
         </hgroup>
         <article>
-            <img src='/images/careerstack.png' />
+            <img src='images/careerstack.png' />
         </article>
     </slide>
     <slide>
@@ -311,7 +311,7 @@ URL: https://code.google.com/p/io-2012-slides
             <h2>Online CV</h2>
         </hgroup>
         <article>
-            <img src='/images/websitepribadi.png' />
+            <img src='images/websitepribadi.png' />
         </article>
     </slide>
 
